# RealityCheck

./: README.md  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: scan_url.py  scans.py  upload.py
backend/app/core/: config.py
backend/app/db/: schema.sql  supabase.py
backend/app/schemas/: scan.py
backend/app/workers/: analyze_audio.py  analyze_image.py  celery_app.py  models.py  tasks.py
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: config.ts  popup.tsx
extension/src/background/messages/: scan.ts
extension/src/contents/: twitter-scanner.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: results.tsx  scanning-loader.tsx  upload.tsx
src/components/ui/: button.tsx  progress.tsx
src/lib/: api.ts
